// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileAnalyzer should return all comments if no patch provided 1`] = `
[
  {
    "comments": {
      "FIXME:": [
        {
          "comment": ":add implementation",
          "line": 6,
        },
      ],
      "NOTE": [
        {
          "comment": "Please don't forget review",
          "line": 12,
        },
        {
          "comment": "another note",
          "line": 13,
        },
      ],
      "tODo:": [
        {
          "comment": "this is an old comment",
          "line": 8,
        },
        {
          "comment": "this should present",
          "line": 11,
        },
        {
          "comment": "placeholder function",
          "line": 16,
        },
      ],
    },
    "file": "./tests/mockFiles/mockFile0.js",
  },
]
`;

exports[`FileAnalyzer should return all identified comments 1`] = `
[
  {
    "comments": {
      "FIXME:": [
        {
          "comment": ":add implementation",
          "line": 6,
        },
      ],
      "NOTE": [
        {
          "comment": "Please don't forget review",
          "line": 12,
        },
      ],
      "tODo:": [
        {
          "comment": "this should present",
          "line": 11,
        },
        {
          "comment": "placeholder function",
          "line": 16,
        },
      ],
    },
    "file": "./tests/mockFiles/mockFile0.js",
  },
]
`;

exports[`FileAnalyzer should skip comments not included on the pr 1`] = `
[
  {
    "comments": {
      "NOTE": [
        {
          "comment": "another note",
          "line": 13,
        },
      ],
      "tODo:": [
        {
          "comment": "this should present",
          "line": 11,
        },
        {
          "comment": "placeholder function",
          "line": 16,
        },
      ],
    },
    "file": "./tests/mockFiles/mockFile0.js",
  },
]
`;

exports[`FileAnalyzer should skip files with no matches 1`] = `
[
  {
    "comments": {
      "TODO:": [
        {
          "comment": "we should write tests",
          "line": 5,
        },
      ],
    },
    "file": "./tests/mockFiles/mockFile0.js",
  },
]
`;
